# some-cookies

./: .coverage  README.md  pyproject.toml
db/: Profile.db  create_cookie_profile.sql  insert_cookie_profile.sql
some_cookies/: main.py
some_cookies/core/: settings.py
some_cookies/utils/: browser.py  db.py  news.py
some_cookies/utils/queries/: create.py  insert.py  select.py  update.py
tests/: test_utils_browser.py  test_utils_db.py  test_utils_news.py
